--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@react-spring/web": "9.5.5",
     "axios": "1.1.3",
     "classnames": "2.3.2",
+    "D": "^1.0.0",
     "echarts": "5.4.1",
     "mockjs": "1.1.0",
     "react": "18.2.0",
@@ -34,6 +36,7 @@
     "@unocss/core": "^0.50.4",
     "@vitejs/plugin-react": "3.1.0",
     "eslint": "8.25.0",
+    "netlify-cli": "^13.2.0",
     "svgo": "3.0.1",
     "svgstore": "3.0.1",
     "typescript": "4.8.4",
